--- a/package.json
+++ b/package.json
@@ -11,7 +11,22 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/typography": "^0.5.10",
-    "preact": "^10.27.2",
-    "tailwindcss": "^4.1.12"
+    "preact": "^10.27.2"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wowchemy/starter-hugo-academic.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/wowchemy/starter-hugo-academic/issues"
+  },
+  "homepage": "https://github.com/wowchemy/starter-hugo-academic#readme",
+  "devDependencies": {
+    "tailwindcss": "^4.1.16"
   }
 }
